--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,15 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-file-base64": "^1.0.3",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "gapi-script": "^1.2.0",
+    "jwt-decode": "^3.1.2",
+    "passport-google-oauth20": "^2.0.0",
+    "moment": "^2.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
