--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGO="mongodb+srv://Markiv:Markiv@cluster0.ga2dk.mongodb.net/?retryWrites=true&w=majority"
+JWT=8hEnPGeoBqttT7zksxt4G94gW+uMdzwt7EVaRnp0xRI=
